# Normal-Size-Truck-GGJ

./: .gitignore  Cargo.toml  LICENSE.md  README.md
assets/models/placeholder/: defaultCube.glb  defaultPlane.glb  person.glb  plane_grass.glb
imported_assets/Default/models/placeholder/: house.glb  plane_road.glb  truck.glb
raw_assets/models/placeholder/: Truck.blend  Truck.blend1
src/: main.rs
src/camera/: mod.rs
src/characters/: mod.rs
src/spawning/: mod.rs
src/trucks/: mod.rs
