[package]
name = "normal_size_truck"
version = "0.1.0"
edition = "2021"

[dependencies]
avian3d = "0.2.0"
bevy = "0.15.1"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
